error handling implemented

--- a/index.html
+++ b/index.html
@@ -127,5 +127,6 @@
 	<script src="js/controllers/vertretungsplanCtrl.js"></script>
 	<script src="js/controllers/kontaktCtrl.js"></script>
 	<script src="js/controllers/logoutCtrl.js"></script>
+	<script src="js/controllers/errorCtrl.js"></script>
 </body>
 </html>
