--- a/pages/login.html
+++ b/pages/login.html
@@ -46,6 +46,11 @@
 					<label>{{app.text.languageLabel}}</label>
 				</div>
 			</div>
+			<div class="row" ng-if="!!msg">
+				<div class="col-sm-12">
+					<p>{{msg}}</p>
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="logo"></div>
