--- a/pages/login.html
+++ b/pages/login.html
@@ -46,9 +46,9 @@
 					<label>{{app.text.languageLabel}}</label>
 				</div>
 			</div>
-			<div class="row" ng-if="!!msg">
+			<div class="row">
 				<div class="col-sm-12">
-					<p>{{msg}}</p>
+					<p>DEBUG: {{msg}}</p>
 				</div>
 			</div>
 			<div class="row">
