--- a/pages/login.html
+++ b/pages/login.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<img src="https://m.ber.menuplus.de/apple-touch-icon.png"/>
+					<img src="https://m.people-projects-it.com/apple-touch-icon.png"/>
 				</div>
 			</div>
 			<div class="row">
