--- a/pages/error.html
+++ b/pages/error.html
@@ -1,5 +1,5 @@
 <div ui-content-for="pageTitle">
-	<span>{{title}}</span>
+	<span>{{pageTitle}}</span>
 </div>
 <div ng-controller="ErrorCtrl">
 	<div class="section section-default">
